# VulkanQuickStart

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeSettings.json  README.md  VulkanQuickStart_en_US.ts  build.sh  cmake_cmd_line.txt  main.cpp  mainwindow.cpp  mainwindow.ui
VulkanQuickStart/: .cproject  .project  ALL_BUILD.vcxproj  CMakeLists.txt  CMakeSettings.json  VkShaders.vcxproj  VulkanQuickStart.sln  VulkanQuickStart.vcxproj  ZERO_CHECK.vcxproj
VulkanQuickStart/include/: defines.h  global.h  vk_app.h  vk_buffer.h  vk_computeQueue.h  vk_computeStep.h  vk_defines.h  vk_deviceContext.h  vk_forwardDeclarations.h  vk_guiWindow.h  vk_image.h  vk_imageCopier.h  vk_initializers.h  vk_logger.h  vk_model.h  vk_modelObj.h  vk_modelPNC3f.h  vk_modelPNCT3f.h  vk_offscreenPass.h  vk_offscreenPassBase.h  vk_pipeline.h  vk_pipeline3D.h  vk_pipeline3DWithSampler.h  vk_pipeline3DWithTexture.h  vk_pipelineBase.h  vk_pipelineGroup.h  vk_pipelineImageProc.h  vk_pipelineList.h  vk_pipelinePNC3f.h  vk_pipelinePNCT3f.h  vk_pipelineSceneNode.h  vk_pipelineSceneNode3D.h  vk_pipelineSceneNode3DWSampler.h  vk_pipelineSceneNodeBase.h  vk_pipelineSceneNodeUi.h  vk_pipelineUboGroup.h  vk_pipelineUboGroupBase.h  vk_pipelineUi.h  vk_postDrawTask.h  vk_scene.h  (+22 more)
VulkanQuickStart/shaders/: shader.frag  shader.vert  shader_depth.frag  shader_depth.vert  shader_ui.frag  shader_ui.vert  shader_wireframe.frag
VulkanQuickStart/src/: VQSETest.cxx  VulkanQuickStart.cxx  vk_app.cpp  vk_buffer.cpp  vk_computeQueue.cpp  vk_computeStep.cpp  vk_deviceContext.cpp  vk_device_context.cpp  vk_guiButton.cpp  vk_guiWindow.cpp  vk_image.cpp  vk_imageCopier.cpp  vk_logger.cpp  vk_model.cpp  vk_modelObj.cpp  vk_modelPNC3f.cpp  vk_modelPNCT3f.cpp  vk_offscreenPass.cpp  vk_offscreenPassBase.cpp  vk_pipeline.cpp  vk_pipeline3D.cpp  vk_pipeline3DWithTexture.cpp  vk_pipelineBase.cpp  vk_pipelineList.cpp  vk_pipelinePNC3f.cpp  vk_pipelinePNCT3f.cpp  vk_pipelineSceneNode3DWTexture.cpp  vk_pipelineSceneNode3d.cpp  vk_pipelineSceneNodeBase.cpp  vk_pipelineSceneNodeGroup.cpp  vk_pipelineSceneNodeUi.cpp  vk_pipelineUboGroup.cpp  vk_pipelineUi.cpp  vk_scene.cpp  vk_sceneNode.cpp  vk_sceneNode3DWTexture.cpp  vk_sceneNode3d.cpp  vk_sceneNodeBase.cpp  vk_sceneNodeGroup.cpp  vk_sceneNodePNC3f.cpp  (+10 more)
VulkanQuickStart/vk_base/: CMakeLists.txt  VulkanDebug.cpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanHeightmap.hpp  VulkanInitializers.hpp  VulkanModel.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.hpp  camera.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
VulkanQuickStartExe/: CMakeLists.txt
VulkanQuickStartExe/src/: VQSETest.cxx  VulkanQuickStart.cxx
VulkanQuickStartLib/: CMakeLists.txt
VulkanQuickStartLib/include/: vk_app.h  vk_buffer.h  vk_computeStep.h  vk_defines.h  vk_deviceContext.h  vk_exports.h  vk_forwardDeclarations.h  vk_image.h  vk_imageCopier.h  vk_initializers.h  vk_logger.h  vk_main.h  vk_modelPNC3f.h  vk_modelPNCT3f.h  vk_nodeAPI.h  vk_offscreenPass.h  vk_offscreenPassBase.h  vk_offscreenSurface.h  vk_offscreenSurfaceBase.h  vk_pipeline.h  vk_pipelineBase.h  vk_pipelineGroup.h  vk_pipelineImageProc.h  vk_pipelinePNC3f.h  vk_pipelinePNCT3f.h  vk_pipelineUbo.h  vk_pipelineUboGroup.h  vk_pipelineUboGroupBase.h  vk_pipelineUi.h  vk_postDrawTask.h  vk_sceneNode.h  vk_sceneNodeBase.h  vk_sceneNodeBinding.h  vk_sceneNodeImageProc.h  vk_sceneNodePNC3f.h  vk_sceneNodePNCT3f.h  vk_sceneNodeUi.h  vk_shaderPool.h  vk_swapChain.h  vk_textureImage.h  (+5 more)
VulkanQuickStartLib/shaders/: shader_ui.vert  shader_wireframe.frag
VulkanQuickStartLib/src/: vk_app.cpp  vk_buffer.cpp  vk_computeStep.cpp  vk_deviceContext.cpp  vk_image.cpp  vk_imageCopier.cpp  vk_logger.cpp  vk_main.cpp  vk_modelPNC3f.cpp  vk_modelPNCT3f.cpp  vk_nodeApi.cpp  vk_offscreenPassBase.cpp  vk_offscreenSurfaceBase.cpp  vk_pipelineBase.cpp  vk_pipelinePNC3f.cpp  vk_pipelinePNCT3f.cpp  vk_pipelineUboGroup.cpp  vk_pipelineUboGroupBase.cpp  vk_pipelineUi.cpp  vk_sceneNodeBase.cpp  vk_sceneNodePNC3f.cpp  vk_sceneNodePNCT3f.cpp  vk_sceneNodeUi.cpp  vk_shaderPool.cpp  vk_textureImage.cpp  vk_transformFunc.cpp  vk_ui_button.cpp  vk_ui_window.cpp  vk_vertexTypes.cpp
VulkanQuickStartLib/vk_base/: VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanModel.hpp  VulkanSwapChain.hpp  VulkanTexture.hpp  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanglTFModel.hpp  vulkanexamplebase.cpp
VulkanQuickStartQT/: CMakeLists.txt  README.md  VulkanQuickStart_en_US.ts  mainwindow.ui
VulkanQuickStartQT/Doc/: VQS Doc.odt
VulkanQuickStartQT/VulkanSrc/: vulkanwidget.cpp  vulkanwidget.h
VulkanQuickStartQT/resources/models/DNA/: DNA.mtl
VulkanSrc/: vulkanwidget.cpp  vulkanwidget.h
resources/models/: test_part_course.stl
resources/models/IndoorPotPlant/: indoor_plant_02.mtl
shaders/: shader.frag  shader.vert  shader_depth.frag  shader_depth.vert  shader_depth_frag.spv  shader_depth_vert.spv  shader_frag.spv  shader_ui.frag  shader_ui_frag.spv  shader_ui_vert.spv  shader_vert.spv  shader_wireframe_frag.spv
src/: VulkanQuickStart.cxx
